Cmake compilation working

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(ROOT_PATH src/Ugine)
 
-add_library(Ugine
+add_library(Ugine SHARED
 	${ROOT_PATH}/Application.cpp 
 	${ROOT_PATH}/Log.cpp
 )
-target_link_libraries(Ugine PRIVATE spdlog::spdlog)
-target_include_directories(
-	Ugine
-	PUBLIC ${PROJECT_SOURCE_DIR}/vendor/spdlog/include
+
+target_compile_definitions(Ugine
+	PRIVATE U_BUILD_DLL
 )
+target_link_libraries(Ugine PUBLIC spdlog::spdlog)
