--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,55 @@ bin-int/
 **.vcxproj.filters
 **.vcxproj.user
 
+# Prerequisites
+*.d
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+*.obj
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Compiled Dynamic libraries
+*.so
+*.dylib
+*.dll
+
+# Fortran module files
+*.mod
+*.smod
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+*.lib
+
+# Executables
+*.exe
+*.out
+*.app
+
 # Cmake files
 CMakeLists.txt.user
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+# build files
+Debug
+Relase
+x64
+x86
+out
