Add headers files to cmake files

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -1,8 +1,21 @@
 set(ROOT_PATH src/Ugine)
 
-add_library(Ugine SHARED
+set(SOURCES 
 	${ROOT_PATH}/Application.cpp 
 	${ROOT_PATH}/Log.cpp
+)
+
+set(HEADERS 
+	${ROOT_PATH}/Application.h
+	${ROOT_PATH}/Core.h
+	${ROOT_PATH}/Entrypoint.h
+	${ROOT_PATH}/Log.h
+	${ROOT_PATH}/Signals.h
+)
+
+add_library(Ugine SHARED
+	${SOURCES}
+	${HEADERS}
 )
 
 target_compile_definitions(Ugine
