--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(ROOT_PATH src/Ugine)
+set(ROOT_PATH src)
 
 set(SOURCES 
 	${ROOT_PATH}/Application.cpp 
@@ -6,9 +6,9 @@ set(SOURCES
 )
 
 set(HEADERS 
+	include/Ugine/Entrypoint.h
 	${ROOT_PATH}/Application.h
 	${ROOT_PATH}/Core.h
-	${ROOT_PATH}/Entrypoint.h
 	${ROOT_PATH}/Log.h
 	${ROOT_PATH}/Signals.h
 )
@@ -18,7 +18,9 @@ add_library(Ugine SHARED
 	${HEADERS}
 )
 
+
 target_compile_definitions(Ugine
 	PRIVATE U_BUILD_DLL
 )
 target_link_libraries(Ugine PUBLIC spdlog::spdlog)
+
