Move copy of ugine.dll to cmake in ugine folder

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -24,3 +24,11 @@ target_compile_definitions(Ugine
 )
 target_link_libraries(Ugine PUBLIC spdlog::spdlog)
 
+
+# copy Ugine.dll to the executable location
+add_custom_command(TARGET Ugine POST_BUILD       
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different 
+        "${CMAKE_CURRENT_BINARY_DIR}/Debug/Ugine.dll"
+        "${PROJECT_SOURCE_DIR}/Sandbox/Debug"
+	COMMENT "Copy Ugine.dll to ${PROJECT_SOURCE_DIR}/Sandbox/Debug")
+
