--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 add_subdirectory(vendor/spdlog)
+add_subdirectory(test)
 add_subdirectory(Ugine)
 add_subdirectory(Sandbox)
 
