Move Application.h to include folder

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCES
 
 set(HEADERS 
 	include/Ugine/Entrypoint.h
-	${ROOT_PATH}/Application.h
+	include/Ugine/Application.h
 	${ROOT_PATH}/Core.h
 	${ROOT_PATH}/Log.h
 	${ROOT_PATH}/Signals.h
@@ -18,12 +18,15 @@ add_library(Ugine SHARED
 	${HEADERS}
 )
 
+target_include_directories(Ugine
+	PRIVATE include/Ugine
+)
 
 target_compile_definitions(Ugine
 	PRIVATE U_BUILD_DLL
 )
-target_link_libraries(Ugine PUBLIC spdlog::spdlog)
 
+target_link_libraries(Ugine PUBLIC spdlog::spdlog)
 
 # copy Ugine.dll to the executable location
 add_custom_command(TARGET Ugine POST_BUILD       
