Add Event class

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -1,16 +1,19 @@
-set(ROOT_PATH src)
+set(SRC_PATH src)
+set (INCLUDE_PATH include/Ugine)
 
 set(SOURCES 
-	${ROOT_PATH}/Application.cpp 
-	${ROOT_PATH}/Log.cpp
+	${SRC_PATH}/Application.cpp 
+	${SRC_PATH}/Log.cpp
 )
 
 set(HEADERS 
-	include/Ugine/Entrypoint.h
-	include/Ugine/Application.h
-	include/Ugine/Log.h
-	include/Ugine/Core.h
-	${ROOT_PATH}/Signals.h
+	${INCLUDE_PATH}/Entrypoint.h
+	${INCLUDE_PATH}/Application.h
+	${INCLUDE_PATH}/Log.h
+	${INCLUDE_PATH}/Core.h
+	${INCLUDE_PATH}/Event/Event.h
+	${INCLUDE_PATH}/Event/MouseEvent.h
+	${SRC_PATH}/Signals.h
 )
 
 add_library(Ugine SHARED
