Add copy sdl2.dll

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -30,4 +30,9 @@ if (UGINE_SHARED_LIBRARY)
 			$<TARGET_FILE:Ugine>
 			$<TARGET_FILE_DIR:Sandbox>
 		COMMENT "Copy Ugine.dll")
+	add_custom_command(
+			TARGET Sandbox POST_BUILD
+			COMMAND ${CMAKE_COMMAND} -E copy_if_different "$<TARGET_FILE:SDL2::SDL2>" "$<TARGET_FILE_DIR:Sandbox>"
+			COMMENT "Copy SDL2.dll"
+	)
 endif()
