--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,15 @@ cmake_minimum_required(VERSION 3.24)
 project(UgineProject VERSION 1.0)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(SDL2IMAGE_INSTALL OFF)
+set(SDL2IMAGE_SAMPLES OFF)
 
 option(UGINE_SHARED_LIBRARY "Build shared library" OFF)
 
 add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/SDL)
+add_subdirectory(vendor/SDL_image)
+set(BUILD_SHARED_LIBS OFF)
 add_subdirectory(Ugine)
 add_subdirectory(Test)
 add_subdirectory(Sandbox)
