Rendering image and add AssetRenderer class

--- a/Sandbox/CMakeLists.txt
+++ b/Sandbox/CMakeLists.txt
@@ -26,3 +26,8 @@ if (UGINE_SHARED_LIBRARY)
 			$<TARGET_FILE_DIR:Sandbox>
 		COMMENT "Copy Ugine.dll")
 endif()
+add_custom_command(TARGET Sandbox POST_BUILD
+		COMMAND ${CMAKE_COMMAND} -E copy_directory
+		${CMAKE_CURRENT_SOURCE_DIR}/assets
+		$<TARGET_FILE_DIR:Sandbox>/assets
+		COMMENT "Copy assets")
