--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -1,27 +1,18 @@
-set(SRC_PATH src)
-set (INCLUDE_PATH include/Ugine)
 
 set(SOURCES
-	${SRC_PATH}/Application.cpp 
-	${SRC_PATH}/Log.cpp
-	${SRC_PATH}/Window.cpp
-	${SRC_PATH}/InputHandler.cpp src/Renderer.cpp src/Component.cpp
-		src/Scene.cpp)
+		src/application.cpp src/component.cpp src/log.cpp
+		src/input_handler.cpp src/renderer.cpp src/scene.cpp src/window.cpp
+)
 
-set(HEADERS 
-	${INCLUDE_PATH}/Entrypoint.h
-	${INCLUDE_PATH}/Application.h
-	${INCLUDE_PATH}/Log.h
-	${INCLUDE_PATH}/Core.h
-	${INCLUDE_PATH}/Event/Event.h
-	${INCLUDE_PATH}/Event/MouseEvent.h
-	${INCLUDE_PATH}/Event/KeyboardEvent.h
-	${INCLUDE_PATH}/Event/EventDispatcher.h
-	${INCLUDE_PATH}/Window.h
-	${INCLUDE_PATH}/Signals.h
-    ${INCLUDE_PATH}/Exception/Exception.h
-	${INCLUDE_PATH}/Input/InputHandler.h include/Ugine/Renderer.h
-		include/Ugine/Component.h include/Ugine/Vector.h include/Ugine/Event/WindowEvent.h include/Ugine/Scene.h)
+set(HEADERS
+		include/ugine/application.h include/ugine/component.h include/ugine/core.h
+		include/ugine/entrypoint.h include/ugine/log.h include/ugine/renderer.h
+		include/ugine/scene.h include/ugine/signals.h include/ugine/vector.h
+		include/ugine/window.h include/ugine/event/event.h
+		include/ugine/event/event_dispatcher.h include/ugine/event/keyboard_event.h
+		include/ugine/event/mouse_event.h include/ugine/event/window_event.h
+		include/ugine/exception/exception.h include/ugine/input/input_handler.h
+)
 
 
 if(UGINE_SHARED_LIBRARY OR BUILD_SHARED_LIBS)
@@ -37,7 +28,7 @@ target_include_directories(Ugine
 
 target_compile_definitions(Ugine
 		PRIVATE U_BUILD_DLL
-		PUBLIC $<$<CONFIG:DEBUG>:UGINE_DEBUG>
+		PRIVATE $<$<CONFIG:DEBUG>:UGINE_DEBUG>
 )
 
 target_link_libraries(Ugine
