Add condition to cmake file to sandbox project so that the correct Ugine static or shared library is used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 option(UGINE_SHARED_LIBRARY "Build shared library" ${BUILD_SHARED_LIBS})
 option(UGINE_TEST "Build Ugine tests" OFF)
 
+# Turning off BUILD_SHARED_LIBS so that dependencies are static build
 set(BUILD_SHARED_LIBS OFF)
 set(SDL2IMAGE_INSTALL OFF)
 set(SDL2IMAGE_SAMPLES OFF)
@@ -20,4 +21,5 @@ if (UGINE_TEST)
 endif()
 add_subdirectory(Sandbox)
 
+# Reset BUILD_SHARED_LIBS variable
 set(BUILD_SHARED_LIBS ${UGINE_SHARED_LIBRARY})
