Add Readme and UGINE_LOGGING option to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 option(UGINE_SHARED_LIBRARY "Build shared library" ${BUILD_SHARED_LIBS})
 option(UGINE_TEST "Build Ugine tests" OFF)
+option(UGINE_LOGGING "Display logging information" OFF)
 
 # Turning off BUILD_SHARED_LIBS so that dependencies are static build
 set(BUILD_SHARED_LIBS OFF)
