Dispatch all events from SDL, and add opengl 4.1 to the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SDL2IMAGE_SAMPLES OFF)
 add_subdirectory(vendor/spdlog)
 add_subdirectory(vendor/SDL)
 add_subdirectory(vendor/SDL_image)
+add_subdirectory(vendor/glad)
 add_subdirectory(Ugine)
 if (UGINE_TEST)
     add_subdirectory(Test)
