--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,26 @@ option(UGINE_SHARED_LIBRARY "Build shared library" ${BUILD_SHARED_LIBS})
 option(UGINE_TEST "Build Ugine tests" OFF)
 option(UGINE_LOGGING "Display logging information" OFF)
 
-# Turning off BUILD_SHARED_LIBS so that dependencies are static build
-set(BUILD_SHARED_LIBS OFF)
-set(SDL2IMAGE_INSTALL OFF)
-set(SDL2IMAGE_SAMPLES OFF)
+function(build_dependencies folder)
+    # Turning off BUILD_SHARED_LIBS so that dependencies are static build
+    set(BUILD_SHARED_LIBS OFF)
+    set(SDL2IMAGE_INSTALL OFF)
+    set(SDL2IMAGE_SAMPLES OFF)
+    add_subdirectory(${folder}/spdlog)
+    add_subdirectory(${folder}/SDL)
+    add_subdirectory(${folder}/SDL_image)
+    add_subdirectory(${folder}/glad)
+endfunction()
 
-add_subdirectory(vendor/spdlog)
-add_subdirectory(vendor/SDL)
-add_subdirectory(vendor/SDL_image)
-add_subdirectory(vendor/glad)
+function(build_tests)
+    if (UGINE_TEST)
+        set(BUILD_SHARED_LIBS OFF)
+        add_subdirectory(Test)
+    endif()
+endfunction()
+
+build_dependencies(vendor)
 add_subdirectory(Ugine)
-if (UGINE_TEST)
-    add_subdirectory(Test)
-endif()
+build_tests()
 add_subdirectory(Sandbox)
 
-# Reset BUILD_SHARED_LIBS variable
-set(BUILD_SHARED_LIBS ${UGINE_SHARED_LIBRARY})
