Add Input class

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -11,7 +11,7 @@ enable_testing()
 add_executable(
   Test
   src/signals_test.cpp src/event_test.cpp
-  src/event_dispatcher_test.cpp src/vector_test.cpp src/scene_test.cpp src/texture_manager_test.cpp src/component_test.cpp src/window_test.cpp src/application_test.cpp src/mocks.h)
+  src/event_dispatcher_test.cpp src/vector_test.cpp src/scene_test.cpp src/texture_manager_test.cpp src/component_test.cpp src/window_test.cpp src/application_test.cpp src/mocks.h src/input_test.cpp)
 
 #target_precompile_headers(
 #		Test
