--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/SDL_image"]
 	path = vendor/SDL_image
 	url = git@github.com:libsdl-org/SDL_image.git
+[submodule "vendor/imgui"]
+	path = vendor/imgui
+	url = git@github.com:ocornut/imgui.git
