Add imgui cmake

--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries(Ugine-private-options
 		INTERFACE SDL2::SDL2-static
 		INTERFACE SDL2_image::SDL2_image-static
 		INTERFACE glad::4.1-static
+		INTERFACE imgui-static
 		)
 
 target_link_libraries(Ugine-public-options
