--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = git@github.com:libsdl-org/SDL_image.git
 [submodule "vendor/imgui"]
 	path = vendor/imgui
-	url = git@github.com:ocornut/imgui.git
+	url = git@github.com:Clement-Hue/imgui.git
