--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ function(build_dependencies folder)
     set(BUILD_SHARED_LIBS OFF)
     set(SDL2IMAGE_INSTALL OFF)
     set(SDL2IMAGE_SAMPLES OFF)
+    set(IMGUI_USE_SDL2 ON)
+    set(IMGUI_USE_OPENGL3 ON)
     add_subdirectory(${folder}/spdlog)
     add_subdirectory(${folder}/SDL)
     add_subdirectory(${folder}/SDL_image)
