--- a/Ugine/CMakeLists.txt
+++ b/Ugine/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(SOURCES
         src/application.cpp src/component.cpp src/log.cpp
         src/renderer.cpp src/scene.cpp src/window/sdl_window.cpp
-        src/event.cpp src/input.cpp src/pch.cpp src/ui/imgui.cpp src/window/window.cpp src/graphic/opengl.cpp)
+        src/event.cpp src/input.cpp src/pch.cpp src/ui/imgui.cpp src/window/window_factory.cpp src/graphic/opengl.cpp)
 
 set(HEADERS
         include/ugine/application.h include/ugine/component.h include/ugine/core.h
